--- a/package.json
+++ b/package.json
@@ -17,19 +17,25 @@
     "@types/node": "20.4.0",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "@web3uikit/core": "^1.1.5",
+    "@web3uikit/icons": "^1.1.2",
+    "@web3uikit/web3": "^0.3.2",
     "autoprefixer": "10.4.14",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
     "ethers": "^6.6.2",
+    "moralis-v1": "^1.13.0",
     "next": "13.4.8",
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-moralis": "^1.4.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
   },
   "devDependencies": {
     "eslint-config-prettier": "^8.8.0",
     "prettier": "3.0.0"
-  }
+  },
+  "packageManager": "yarn@1.22.19"
 }
